--- a/.github/workflows/download-files.yml
+++ b/.github/workflows/download-files.yml
@@ -18,30 +18,25 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Set environment variables
+      run: |
+        echo "CHANNELS_URL=https://fox.toxic-gang.xyz/tata/channels" >> $GITHUB_ENV
+        echo "HMAC_URL=https://fox.toxic-gang.xyz/tata/hmac" >> $GITHUB_ENV
+
     - name: Download CHANNELS_URL
       run: |
-        curl -o channels $CHANNELS_URL
-      env:
-        CHANNELS_URL: 'https://fox.toxic-gang.xyz/tata/channels'
+        curl -o channels "${{ env.CHANNELS_URL }}"
 
     - name: Download HMAC_URL
       run: |
-        curl -o hmac $HMAC_URL
-      env:
-        HMAC_URL: 'https://fox.toxic-gang.xyz/tata/hmac'
+        curl -o hmac "${{ env.HMAC_URL }}"
 
-    - name: Check for changes
+    - name: Commit and push changes
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
         git add channels hmac
         git diff --cached --exit-code || git commit -m "Update files from URLs"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Push changes
-      if: success() && steps.check.outputs.changes_detected == 'true'
-      run: |
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
